# microsoft-iq

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: azure.instructions.md  copilot-instructions.md  dependabot.yml
.github/agents/: Truth_Layer_Foundation.agent.md  Truth_Layer_Hardening.agent.md  Truth_Layer_Pipeline.agent.md  azure-aks.agent.md  azure-apim.agent.md  azure-blob.agent.md  azure-container-apps.agent.md  azure-cosmos.agent.md  azure-foundry.agent.md  azure-postgres.agent.md  azure-redis.agent.md  azure-swa.agent.md  business-strategy-agent.agent.md  code-guidelines-agent.agent.md  competitive-intelligence-agent.agent.md  content-librarian.agent.md  enterprise-connectors.agent.md  financial-modeling-agent.agent.md  platform-quality.agent.md  pr-evaluator.agent.md  process-management-agent.agent.md  python-specialist.agent.md  risk-analysis-agent.agent.md  rust-specialist.agent.md  system-architect.agent.md  tech-manager.agent.md  typescript-specialist.agent.md  ui-agent.agent.md
.github/instructions/: team-mapping.instructions.md  tool-usage.instructions.md
.github/prompts/: architecture-integration.prompt.md  fix-issues-pipeline.prompt.md  platform-quality-evaluation.prompt.md  repository-hygiene-cleanup.prompt.md  tech-lead-issue-correction.prompt.md
docs/: architecture.md
fabric-iq/: README.md
fabric-iq/notebooks/: ingest_and_analyze.py
foundry-iq/: README.md
foundry-iq/ui/: app.js  (+2 more)
scripts/: download_kaggle.py  index_blob_data.py  sync_to_fabric.py  upload_to_blob.py
shared/: postgres_client.py
work-iq/: README.md
(+15 files in other folders)
